# ocaml-rng-experiments

./: Makefile  README.md  compare.sh  dune
c/: .gitignore  Makefile  ocamlrandom.c  ocamlrandom.h  splitmix64.c  splitmix64.h  testocamlrandom.c  testsplitmix  testsplitmix.c  testu01ocamlrandom.c  testu01xoshiro.c  testxoshiro.c  xoshiro256pp.c  xoshiro256pp.h
c/probdist/: gofw.ml  gofw_stubs.c
c/testu01/: README.md  bbattery.ml  dune  stubs.c  testu01.ml  unif01.ml  unif01_stubs.c  unif01_stubs.h
ocaml/: Makefile  bench.ml  dune  randomFunctor.ml  testocamlrandom.ml  testxoshiro.ml
ocaml/make-random/: dune  test.ml
ocaml/splitmix/: sm64.ml
ocaml/tests/: dune
ocaml/xoshiro/: dune  x256pp.ml
ocaml/xoshiro/x256pp_c/: x256pp.c  x256pp.h
prng/src/: bench.ml
prng/src/make-random/: bench.ml  dune
prng/src/splitmix/: dune  reference.c  reference.h  reference.ml  stubs.c
prng/src/splitmix/tests/: dune  reference.c  reference.h  sm64_c.c  sm64_ocaml.ml
prng/src/testutils/: dune  testutils.c  testutils.h  testutils.ml
prng/src/xoshiro/: dune  reference.c  reference.h  reference.ml  stubs.c  x256pp.ml
prng/src/xoshiro/tests/: dune  int.ml  int64.ml  reference.c  reference.h  x256pp_c.c
src/: dune
src/splitmix/: dune  reference.c  reference.h  stubs.c  tests.ml
src/tests/: splitmix.ml
src/xoshiro/: dune  reference.c  stubs.c  x256pp.ml
src/xoshiro/tests/: dune  testInt.ml  testInt64.ml
src/xoshiro/x256pp_c/: x256pp.c
testu01/: README.md
testu01/assets/: README.md  example-foreign-build-dune
testu01/examples/: README.md  bat1.ml  bat2.ml  bat3.ml  birth1.ml  birth2.ml  dune
testu01/probdist/: dune  gofw_stubs.c
testu01/testu01/: README.md  bbattery.ml  bbattery_stubs.c  dune  smarsa_stubs.c  sres_stubs.c  swrite_stubs.c  ulcg_stubs.c  unif01.ml  unif01_stubs.c  unif01_stubs.h  usoft_stubs.c
